2006-10-05 [colin]	2.5.3cvs8

	* src/folderview.c
		Fix go to next * after preferences apply
	* src/msgcache.c
		Do the fd lock/unlock ourselves instead of
		letting the libc do it at each write 

2006-10-05 [colin]	2.5.3cvs7

	* src/common/utils.c
		Faster division, thanks to Jean Diraison

2006-10-05 [paul]	2.5.3cvs6

	* src/common/utils.c
		fix building with --disable-nls

2006-10-04 [colin]	2.5.3cvs5

	* src/folder.c
		Maybe fix a segfault

2006-10-04 [wwp]	2.5.3cvs4

	* src/prefs_folder_item.c
		Fine-tune layouts in folder item prefs. Suggested by
		Fabien Vantard <fzzzzz@gmail.com>.

2006-10-04 [wwp]	2.5.3cvs3

	* src/prefs_folder_item.c
		Kill the clandestine passengers. You didn't see anything.

2006-10-04 [wwp]	2.5.3cvs2

	* src/prefs_folder_item.c
		Add a way to test the subject simplify regexp in
		folder prefs. Patch by Fabien Vantard <fzzzzz@gmail.com>,
		w/ few layout changes.

2006-20-04 [paul]	2.5.3cvs1

	* NEWS
	* README
	* configure.ac
		Update version number following
		stable release

2006-10-04 [colin]	2.5.2cvs42

	* src/folder.c
	* src/folder.h
	* src/summaryview.c
		Provide a way for folder classes to set their sort
		type and key

2006-10-03 [colin]	2.5.2cvs41

	* src/mh.c
		Don't use strlen() to know if the
		string's empty

2006-10-03 [colin]	2.5.2cvs40

	* src/mh.c
		Fix "check for new folders" with accentued folders

2006-10-03 [ticho]	2.5.2cvs39

	* src/filtering.c
	* src/folder.c
	* src/inc.c
	* src/mbox.c
		Colin's fix for "copy" filtering rules.

2006-10-02 [colin]	2.5.2cvs38

	* src/folderview.c
		Fix for double-click too

2006-10-02 [colin]	2.5.2cvs37

	* src/folderview.c
		correct fix for cvs36

2006-10-02 [colin]	2.5.2cvs36

	* src/folderview.c
		Fix 'goto next unread' after collapsing/expanding 
		a node.

2006-10-02 [colin]	2.5.2cvs35

	* src/summaryview.c
		Fix double freeze/thaw
	* src/common/utils.c
	* src/common/utils.h
		Reimplement strftime
	* src/procheader.c
		Use it


2006-10-02 [colin]	2.5.2cvs34

	* src/mh.c