@@ -1963,3 +1963,4 @@
 ( cvs diff -u -r 1.36.2.82 -r 1.36.2.83 src/common/utils.c;  ) > 2.5.3cvs6.patchset
 ( cvs diff -u -r 1.36.2.83 -r 1.36.2.84 src/common/utils.c;  ) > 2.5.3cvs7.patchset
 ( cvs diff -u -r 1.207.2.128 -r 1.207.2.129 src/folderview.c;  cvs diff -u -r 1.16.2.44 -r 1.16.2.45 src/msgcache.c;  ) > 2.5.3cvs8.patchset
+( cvs diff -u -r 1.10.2.19 -r 1.10.2.20 src/prefs_gtk.c;  ) > 2.5.3cvs9.patchset
