@@ -1,3 +1,8 @@
+2006-10-05 [colin]	2.5.3cvs9
+
+	* src/prefs_gtk.c
+		Use unlocked_stdio here too
+
 2006-10-05 [colin]	2.5.3cvs8
 
 	* src/folderview.c
